--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@keystone-6/auth": "^8.0.0",
     "@keystone-6/core": "^6.0.0",
     "@keystone-6/fields-document": "^9.0.0",
+    "dotenv": "^17.2.3",
+    "iuliia": "^0.8.2",
     "typescript": "^5.5.0"
   }
 }
