--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "keystone dev",
     "start": "keystone start",
-    "build": "keystone build"
+    "build": "keystone build",
+    "test": "jest"
   },
   "dependencies": {
     "@graphql-tools/schema": "^10.0.25",
@@ -18,6 +19,11 @@
     "typescript": "^5.5.0"
   },
   "devDependencies": {
-    "@types/nodemailer": "^7.0.2"
+    "@testcontainers/postgresql": "^11.7.1",
+    "@types/jest": "^30.0.0",
+    "@types/nodemailer": "^7.0.2",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2"
   }
 }
