--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@keystone-6/fields-document": "^9.0.0",
     "dotenv": "^17.2.3",
     "iuliia": "^0.8.2",
-    "mime": "^4.1.0",
     "nodemailer": "^7.0.7",
+    "sharp": "^0.34.4",
     "typescript": "^5.5.0"
   },
   "devDependencies": {
