--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@a2seven/yoo-checkout": "^1.1.4",
     "@graphql-tools/schema": "^10.0.25",
     "@keystone-6/auth": "^8.0.0",
     "@keystone-6/core": "^6.0.0",
     "@keystone-6/fields-document": "^9.0.0",
     "dotenv": "^17.2.3",
     "iuliia": "^0.8.2",
+    "nanoid": "^5.1.6",
     "nodemailer": "^7.0.7",
     "sharp": "^0.34.4",
-    "typescript": "^5.5.0"
+    "typescript": "^5.5.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@testcontainers/postgresql": "^11.7.1",
