--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,7 @@ services:
         FRONTEND_URL: http://localhost:3000
         YOO_MONEY_SHOP_ID_FILE: /run/secrets/yoo_money_shop_id
         YOO_MONEY_SECRET_ID_FILE: /run/secrets/yoo_money_secret_id
+        NODE_ENV: production
         
     secrets: 
       - database_url
