--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@testcontainers/postgresql": "^11.7.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/graphql-upload": "^17.0.0",
     "@types/jest": "^30.0.0",
     "@types/nodemailer": "^7.0.2",
