--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@keystone-6/fields-document": "^9.0.0",
     "dotenv": "^17.2.3",
     "iuliia": "^0.8.2",
+    "lodash": "^4.17.21",
     "nanoid": "^5.1.6",
     "nodemailer": "^7.0.7",
     "sharp": "^0.34.4",
@@ -28,6 +29,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/graphql-upload": "^17.0.0",
     "@types/jest": "^30.0.0",
+    "@types/lodash": "^4.17.20",
     "@types/nodemailer": "^7.0.2",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.5",
