--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@keystone-6/core": "^6.0.0",
     "@keystone-6/fields-document": "^9.0.0",
     "dotenv": "^17.2.3",
+    "heic-convert": "^2.1.0",
     "iuliia": "^0.8.2",
     "lodash": "^4.17.21",
     "nanoid": "^5.1.6",
@@ -28,6 +29,7 @@
     "@testcontainers/postgresql": "^11.7.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/graphql-upload": "^17.0.0",
+    "@types/heic-convert": "^2.1.0",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
     "@types/nodemailer": "^7.0.2",
