--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -67,6 +67,7 @@ jobs:
           revision-core-fraction: 100
           revision-image-url: cr.yandex/${{ vars.YC_REGISTRY_ID }}/${{ github.event.repository.name }}:latest
           revision-execution-timeout: 30
+          revision-network-id: ${{ vars.YC_NETWORK_ID }}
           revision-env: |
             DATABASE_URL=${{ secrets.DATABASE_URL}}
             YC_S3_KEY_ID=${{ secrets.YC_S3_KEY_ID }}
@@ -78,3 +79,4 @@ jobs:
             FRONTEND_URL=${{ vars.FRONTEND_URL }}
             YOO_MONEY_SHOP_ID=${{ secrets.YOO_MONEY_SHOP_ID }}
             YOO_MONEY_SECRET_ID=${{ secrets.YOO_MONEY_SECRET_ID }}
+            REDIS_URL=${{ secrets.REDIS_URL }}
