--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@a2seven/yoo-checkout": "^1.1.4",
     "@graphql-tools/schema": "^10.0.25",
     "@keystone-6/auth": "^8.0.0",
-    "@keystone-6/core": "^6.0.0",
+    "@keystone-6/core": "^6.5.1",
     "@keystone-6/fields-document": "^9.0.0",
     "cookie": "^1.1.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "heic-convert": "^2.1.0",
     "iuliia": "^0.8.2",
+    "keystone-app": "^0.0.1-security",
     "nanoid": "^5.1.6",
     "nodemailer": "^7.0.7",
     "pino": "^10.1.0",
