--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,6 +42,12 @@ jobs:
         with:
           yc-sa-json-credentials: ${{ secrets.YC_SA_CI_CD_KEY_JSON }}
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Pull from Docker Hub and Push to Yandex CR
         env:
           CR_REGISTRY_ID: ${{ vars.YC_REGISTRY_ID }}
