--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,23 @@
-**/.dockerignore
-**/.env
-**/.gitignore
-**/.vs
-**/.vscode
-**/docker-compose*
-**/compose*
-**/Dockerfile*
-**/node_modules
-**/secrets.dev.yaml
-**/values.dev.yaml
-**/build
+.dockerignore
+.env
+.gitignore
+.vs
+.vscode
+docker-compose*
+compose*
+Dockerfile*
+node_modules
+secrets.dev.yaml
+values.dev.yaml
+build
 LICENSE
 README.md
 __tests__
 secrets
 script
 data
+dist
+npm-debug.log
+yarn-error.log
+.github
+coverage
