--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@keystone-6/auth": "^8.0.0",
     "@keystone-6/core": "^6.5.1",
     "@keystone-6/fields-document": "^9.0.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.3",
     "cookie": "^1.1.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
