--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,54 +37,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
-      - name: Login to Yandex Cloud Container Registry
-        uses: yc-actions/yc-cr-login@v3
-        with:
-          yc-sa-json-credentials: ${{ secrets.YC_SA_CI_CD_KEY_JSON }}
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Pull from Docker Hub and Push to Yandex CR
-        env:
-          CR_REGISTRY_ID: ${{ vars.YC_REGISTRY_ID }}
-          IMAGE_NAME: ${{ github.event.repository.name }}
-          IMAGE_TAG: latest
-
+      - name: Set up SSH
         run: |
-          docker pull ${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -p 22 -t rsa ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_host
 
-          docker tag ${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} \
-          cr.yandex/${{ env.CR_REGISTRY_ID }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-
-          docker push cr.yandex/${{ env.CR_REGISTRY_ID }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-
-      - name: Deploy to Serverless Container
-        uses: yc-actions/yc-sls-container-deploy@v3
-        with:
-          yc-sa-json-credentials: ${{ secrets.YC_SA_CI_CD_KEY_JSON  }}
-          container-name: ${{ vars.YC_CONTAINER_NAME }}
-          folder-id: ${{ vars.YC_FOLDER_ID }}
-          revision-service-account-id: ${{ secrets.YC_SA_ID }}
-          revision-cores: 1
-          revision-core-fraction: 100
-          revision-concurrency: 8
-          revision-memory: 512Mb
-          revision-execution-timeout: 30
-          revision-image-url: cr.yandex/${{ vars.YC_REGISTRY_ID }}/${{ github.event.repository.name }}:latest
-          revision-network-id: ${{ vars.YC_NETWORK_ID }}
-          revision-env: |
-            DATABASE_URL=${{ secrets.DATABASE_URL}}
-            YC_S3_KEY_ID=${{ secrets.YC_S3_KEY_ID }}
-            YC_S3_SECRET_KEY=${{ secrets.YC_S3_SECRET_KEY }}
-            YC_S3_BUCKET=${{ vars.YC_S3_BUCKET }}
-            YC_S3_REGION=${{ vars.YC_S3_REGION }}
-            YC_S3_PRIVATE_ENDPOINT=${{ vars.YC_S3_PRIVATE_ENDPOINT }}
-            SESSION_SECRET=${{ secrets.SESSION_SECRET }}
-            FRONTEND_URL=${{ vars.FRONTEND_URL }}
-            YOO_MONEY_SHOP_ID=${{ secrets.YOO_MONEY_SHOP_ID }}
-            YOO_MONEY_SECRET_ID=${{ secrets.YOO_MONEY_SECRET_ID }}
-            NODE_ENV=production
+      - name: Load Docker image and restart docker
+        run: |
+          ssh -i ~/.ssh/id_rsa ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} <<EOF
+          docker compose pull server
+          docker compose up server --force-recreate -d
+          docker image prune -f
+          EOF
