--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,12 +37,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Set up SSH
         run: |
           mkdir -p ~/.ssh
@@ -56,4 +50,7 @@ jobs:
           ssh -o StrictHostKeyChecking=yes -T ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}  <<EOF
           docker compose pull server
           docker compose up server --force-recreate -d
+          docker image prune -f
           EOF
+        env:
+          DOCKER_CLI_AUTH: ${{ secrets.DOCKERHUB_TOKEN }}
