--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
     "@types/nodemailer": "^7.0.2",
+    "file-type": "^21.3.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
